spacing fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,7 +55,7 @@ h1 {
 
 #count {
   /* background: lightgrey; */
-  height: 250px;
+  height: 16.5em;
 }
 
 #winner {
